tests/lean/rwWithSynthesizeBug.lean.expected.out
rwWithSynthesizeBug.lean:36:18-39:15: error: unsolved goals
inst : Bar Nat := @Bar.mk Nat (@OfNat.ofNat Nat (nat_lit 0) (instOfNatNat (nat_lit 0)))
h : @w Nat (@f Nat inst (@OfNat.ofNat Nat (nat_lit 5) (instOfNatNat (nat_lit 5))))
⊢ True
